azure secrets with service principal

--- a/apps/mealie/mealie-service.yaml
+++ b/apps/mealie/mealie-service.yaml
@@ -10,6 +10,6 @@ spec:
       port: 9925
       targetPort: 9000
   selector:
-    io.kompose.service: mealie
+    app: mealie
 status:
   loadBalancer: {}
