--- a/apps/mealie/mealie-deployment.yaml
+++ b/apps/mealie/mealie-deployment.yaml
@@ -2,23 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   creationTimestamp: null
-  # labels:
-  #   io.kompose.service: mealie
   name: mealie
   namespace: mealie
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: mealie
+      app: mealie
   # strategy:
   #   type: Recreate
   template:
     metadata:
       creationTimestamp: null
       labels:
-        io.kompose.network/mealie-default: "true"
-        io.kompose.service: mealie
+        app: mealie
     spec:
       containers:
         - env:
@@ -65,4 +62,3 @@ spec:
         - name: mealie-data
           persistentVolumeClaim:
             claimName: mealie-data
-# status: {}
