--- a/apps/mealie/database.yaml
+++ b/apps/mealie/database.yaml
@@ -5,42 +5,45 @@
 
 apiVersion: v1
 data:
-  password: VHhWZVE0bk44MlNTaVlIb3N3cU9VUlp2UURhTDRLcE5FbHNDRUVlOWJ3RHhNZDczS2NrSWVYelM1Y1U2TGlDMg==
+  #username: mealie
+  #password: testpw
   username: bWVhbGll
+  password: dGVzdHB3
 kind: Secret
 metadata:
-  name: cluster-example-app-user
-  namespace: database
+  name: mealie-db-creds
+  namespace: mealie
 type: kubernetes.io/basic-auth
----
-apiVersion: v1
-data:
-  password: dU4zaTFIaDBiWWJDYzRUeVZBYWNCaG1TemdxdHpxeG1PVmpBbjBRSUNoc0pyU211OVBZMmZ3MnE4RUtLTHBaOQ==
-  username: cG9zdGdyZXM=
-kind: Secret
-metadata:
-  name: cluster-example-superuser
-  namespace: database
-type: kubernetes.io/basic-auth
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: backup-creds
-  namespace: database
-data:
-  ACCESS_KEY_ID: a2V5X2lk
-  ACCESS_SECRET_KEY: c2VjcmV0X2tleQ==
+
+# ---
+# apiVersion: v1
+# data:
+#   password: dU4zaTFIaDBiWWJDYzRUeVZBYWNCaG1TemdxdHpxeG1PVmpBbjBRSUNoc0pyU211OVBZMmZ3MnE4RUtLTHBaOQ==
+#   username: cG9zdGdyZXM=
+# kind: Secret
+# metadata:
+#   name: cluster-example-superuser
+#   namespace: database
+# type: kubernetes.io/basic-auth
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: backup-creds
+#   namespace: database
+# data:
+#   ACCESS_KEY_ID: a2V5X2lk
+#   ACCESS_SECRET_KEY: c2VjcmV0X2tleQ==
 ---
 apiVersion: postgresql.k8s.enterprisedb.io/v1
 kind: Cluster
 metadata:
-  name: cluster-example-full
-  namespace: database
+  name: mealie-postgres
+  namespace: mealie
 spec:
   description: "Example of cluster"
   imageName: quay.io/enterprisedb/postgresql:16.1
-  instances: 2
+  instances: 3
   primaryUpdateStrategy: unsupervised
 
   bootstrap:
@@ -48,15 +51,15 @@ spec:
       database: mealie
       owner: mealie
       secret:
-        name: cluster-example-app-user
+        name: mealie-db-creds
     # Alternative bootstrap method: start from a backup
     #recovery:
     #  backup:
     #    name: backup-example
 
-  enableSuperuserAccess: true
-  superuserSecret:
-    name: cluster-example-superuser
+  # enableSuperuserAccess: true
+  # superuserSecret:
+  #   name: cluster-example-superuser
 
   storage:
     storageClass: local-path
