--- a/apps/mealie/mealie-data-persistentvolumeclaim.yaml
+++ b/apps/mealie/mealie-data-persistentvolumeclaim.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   name: mealie-data
-  namespace: mealie
+  namespace: mealie-test
 spec:
   accessModes:
     - ReadWriteOnce
