--- a/kubernetes/edb/test/test1.yaml
+++ b/kubernetes/edb/test/test1.yaml
@@ -21,28 +21,27 @@ spec:
   #               the switchover of the primary
   primaryUpdateStrategy: unsupervised
 
-  # Require 1Gi of space
   storage:
-    size: 1Gi
----
-apiVersion: postgresql.k8s.enterprisedb.io/v1
-kind: Pooler
-metadata:
-  name: test1-pooler-rw
-  namespace: test1
-spec:
-  cluster:
-    name: test1-cluster
-  instances: 2
-  type: rw
-  pgbouncer:
-    poolMode: session
-    parameters:
-      application_name_add_host: "1"
-      server_check_delay: "30.0"
-      server_lifetime: "1800"
-      server_idle_timeout: "180.0"
-      server_connect_timeout: "15"
-      client_login_timeout: "60.0"
-      default_pool_size: "20"
-
+    size: 200Mi
+# ---
+# apiVersion: postgresql.k8s.enterprisedb.io/v1
+# kind: Pooler
+# metadata:
+#   name: test1-pooler-rw
+#   namespace: test1
+# spec:
+#   cluster:
+#     name: test1-cluster
+#   instances: 2
+#   type: rw
+#   pgbouncer:
+#     poolMode: session
+#     parameters:
+#       application_name_add_host: "1"
+#       server_check_delay: "30.0"
+#       server_lifetime: "1800"
+#       server_idle_timeout: "180.0"
+#       server_connect_timeout: "15"
+#       client_login_timeout: "60.0"
+#       default_pool_size: "20"
+#
