--- a/kubernetes/keda/cluster.yaml
+++ b/kubernetes/keda/cluster.yaml
@@ -1,4 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: test
+  name: kedapoc
+---
+apiVersion: postgresql.k8s.enterprisedb.io/v1
+kind: Cluster
+metadata:
+  name: kedapoc-db
+  namespace: kedapoc
+spec:
+  description: Postgres cluster for the linkding application
+  imageName: quay.io/enterprisedb/postgresql:16.1
+  instances: 3
