--- a/kubernetes/keda/cluster.yaml
+++ b/kubernetes/keda/cluster.yaml
@@ -12,3 +12,6 @@ spec:
   description: Postgres cluster for the linkding application
   imageName: quay.io/enterprisedb/postgresql:16.1
   instances: 3
+
+  storage:
+    size: 200Mi
