--- a/kubernetes/keda/deployment.yaml
+++ b/kubernetes/keda/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
     app: httpd-frontend
     tier: frontend
   name: httpd-frontend
+  namespace: kedapoc
 spec:
   replicas: 1
   selector:
