--- a/kubernetes/keda/deployment.yaml
+++ b/kubernetes/keda/deployment.yaml
@@ -21,6 +21,6 @@ spec:
       containers:
         - image: httpd
           name: httpd
-        - env:
+          env:
             - name: DATABASE_CONN
               value: postgresql://app:ohfLnipJ4lgJgTi64NpfTKC21U7SV8FPby2AVtMD1yQYIiMLF2HnZVYdwPJOgHWR@kedapoc-db-rw:5432/app
