--- a/kubernetes/keda/cluster.yaml
+++ b/kubernetes/keda/cluster.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: kedapoc
+  name: kedapoc2
 ---
 apiVersion: postgresql.k8s.enterprisedb.io/v1
+# apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: kedapoc-db
-  namespace: kedapoc
 spec:
   description: Postgres cluster for the linkding application
   imageName: quay.io/enterprisedb/postgresql:16.1
