--- a/kubernetes/keda/kustomization.yaml
+++ b/kubernetes/keda/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 namespace: kedapoc2
 resources:
   - cluster.yaml
-  # - deployment.yaml
-  # - keda.yaml
+  - deployment.yaml
+  - keda.yaml
