--- a/kubernetes/deployments/httpd-backend.yaml
+++ b/kubernetes/deployments/httpd-backend.yaml
@@ -6,7 +6,7 @@ metadata:
     tier: backend
   name: httpd-backend
 spec:
-  replicas: 2
+  # replicas: 2
   selector:
     matchLabels:
       app: httpd-backend
