--- a/kubernetes/keda/kustomization.yaml
+++ b/kubernetes/keda/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kedapoc2
+namespace: kedapoc
 resources:
   - cluster.yaml
   - deployment.yaml
