--- a/kubernetes/auth/ory/kratos/values-sofi.yaml
+++ b/kubernetes/auth/ory/kratos/values-sofi.yaml
@@ -59,27 +59,27 @@ deployment:
     # - name: DSN
     #   value: "postgres://${PG_USER}:${PG_SECRET}@postgresd:5432/kratos?sslmode=${SSL_MODE}&max_conns=20&max_idle_conns=4"
     - name: SERVE_PUBLIC_BASE_URL
-      value: "https://test.mischa.dk:443/.ory/kratos/public/"
+      value: "https://test.mischa.dk/.ory/kratos/public/"
     - name: SELFSERVICE_WHITELISTED_RETURN_URLS
-      value: "https://test.mischa.dk:443/ss/auth/hydra/login,https://test.mischa.dk:443/,https://test.mischa.dk/"
+      value: "https://test.mischa.dk/ss/auth/hydra/login,https://test.mischa.dk/,https://test.mischa.dk/"
     - name: SELFSERVICE_DEFAULT_BROWSER_RETURN_URL
-      value: "https://test.mischa.dk:443"
+      value: "https://test.mischa.dk"
     - name: SELFSERVICE_FLOWS_SETTINGS_UI_URL
-      value: "https://test.mischa.dk:443/ss/settings"
+      value: "https://test.mischa.dk/ss/settings"
     - name: SELFSERVICE_FLOWS_VERIFICATION_UI_URL
-      value: "https://test.mischa.dk:443/ss/verify"
+      value: "https://test.mischa.dk/ss/verify"
     - name: SELFSERVICE_FLOWS_VERIFICATION_AFTER_DEFAULT_BROWSER_RETURN_URL
-      value: "https://test.mischa.dk:443"
+      value: "https://test.mischa.dk"
     - name: SELFSERVICE_FLOWS_RECOVERY_UI_URL
-      value: "https://test.mischa.dk:443/ss/recovery"
+      value: "https://test.mischa.dk/ss/recovery"
     - name: SELFSERVICE_FLOWS_LOGOUT_UI_URL
-      value: "https://test.mischa.dk:443/ss/logout"
+      value: "https://test.mischa.dk/ss/logout"
     - name: SELFSERVICE_FLOWS_LOGIN_UI_URL
-      value: "https://test.mischa.dk:443/ss/auth/login"
+      value: "https://test.mischa.dk/ss/auth/login"
     - name: SELFSERVICE_FLOWS_REGISTRATION_UI_URL
-      value: "https://test.mischa.dk:443/ss/auth/registration"
+      value: "https://test.mischa.dk/ss/auth/registration"
     - name: SELFSERVICE_FLOWS_ERROR_UI_URL
-      value: "https://test.mischa.dk:443/ss/error"
+      value: "https://test.mischa.dk/ss/error"
     # - name: COURIER_SMTP_CONNECTION_URI
     #   value: "${COURIER_SMTP_CONNECTION_URI}"
     - name: SQA_OPT_OUT
