--- a/kubernetes/auth/ory/kratos/values.yaml
+++ b/kubernetes/auth/ory/kratos/values.yaml
@@ -13,8 +13,8 @@ kratos:
     courier:
       smtp:
         connection_uri: smtps://test:test@mailslurper:1025/?skip_ssl_verify=true
-    selfservice:
-      default_browser_return_url: http://127.0.0.1:4455/
+    # selfservice:
+    #   default_browser_return_url: http://127.0.0.1:4455/
   automigration:
     enabled: true
   identitySchemas:
@@ -54,6 +54,41 @@ kratos:
           }
         }
       }
+
+ingress:
+  admin:
+    enabled: true
+    className: traefik
+    # annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: test.mischa.dk
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+  public:
+    enabled: true
+    className: traefik
+    annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: test.mischa.dk
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
+## -- Application specific config
+
 deployment:
   extraEnv:
     # - name: DSN
